- Typo in db.authenticate caused a check (for provided connection) to return false, causing a connection AND onAll=true to be passed into __executeQueryCommand downstream (Issue #831, https://github.com/m4tty)
- Allow gridfs objects to use non ObjectID ids (Issue #825, https://github.com/nailgun)
- removed the double wrap, by not passing an Error object to the wrap function (Issue #832, https://github.com/m4tty)

1.2.7 2012-12-23
----------------
- Rolled back batches as they hang in certain situations
- Fixes for NODE-25, keep reading from secondaries when primary goes down

1.2.6 2012-12-21
----------------
- domain sockets shouldn't require a port arg (Issue #815, https://github.com/aheckmann)
- Cannot read property 'info' of null (Issue #809, https://github.com/thesmart)
- Cursor.each should work in batches (Issue #804, https://github.com/Swatinem)
- Cursor readPreference bug for non-supported read preferences (Issue #817)

1.2.5 2012-12-12
----------------
- Fixed ssl regression, added more test coverage (Issue #800)
- Added better error reporting to the Db.connect if no valid serverConfig setup found (Issue #798)

1.2.4 2012-12-11
----------------
- Fix to ensure authentication is correctly applied across all secondaries when using MongoClient.

1.2.3 2012-12-10
----------------
- Fix for new replicaset members correctly authenticating when being added (Issue #791, https://github.com/m4tty)
- Fixed seek issue in gridstore when using stream (Issue #790)

1.2.2 2012-12-03
----------------
- Fix for journal write concern not correctly being passed under some circumstances.
- Fixed correct behavior and re-auth for servers that get stepped down (Issue #779).

1.2.1 2012-11-30
----------------
- Fix for double callback on insert with w:0 specified (Issue #783)
- Small cleanup of urlparser.

1.2.0 2012-11-27
----------------
- Honor connectTimeoutMS option for replicasets (Issue #750, https://github.com/aheckmann)