@@ -969,10 +969,9 @@ Collection.prototype.findOne = function findOne () {
   var callback = args.pop();
   var cursor = this.find.apply(this, args).limit(-1).batchSize(1);
   // Return the item
-  cursor.toArray(function(err, items) {
+  cursor.nextObject(function(err, item) {
     if(err != null) return callback(err instanceof Error ? err : self.db.wrap(err), null);
-    if(items.length == 1) return callback(null, items[0]);
-    callback(null, null);
+    callback(null, item);
   });
 };
 
